# Simple_UAV_RL

./: .gitignore  DETAILED_DESIGN.md  Multi_UAV_env.py  README.md  converted_dataset.jsonl  data_gene.py  main.py  predict_lora.py  pyproject.toml  reward_cal  runner.py  train_lora.py  visualizer.py
agent/: agent_UAV.py
common/: arguments.py  replay_buffer.py  rollout.py
network/: __init__.py  base_net.py  vdn_net.py
policy/: vdn_UAV.py
